fix new comment spacing

--- a/adhocracy/kit_theme/static_src/stylesheets/_overwrite.scss
+++ b/adhocracy/kit_theme/static_src/stylesheets/_overwrite.scss
@@ -150,3 +150,10 @@ div#metanavigation a:hover {
 #new_proposals_table .pager_wrapper {
     margin-bottom: 1em;
 }
+
+div[comment_id] {
+    margin-top: 1em;
+    h4 {
+        line-height: 2em;
+    }
+}
